Added YAML level loading and separate tank barrel

--- a/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj
+++ b/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj
@@ -20,10 +20,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="LevelLoader.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
+    <ClInclude Include="LevelLoader.h" />
     <ClInclude Include="ScreenSize.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
