Targets now spawn one after another, added score, cleaned up target class, fixed some bugs

--- a/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj
+++ b/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj
@@ -30,8 +30,8 @@
     <ClInclude Include="include\OrientedBoundingBox.h" />
     <ClInclude Include="include\ScreenSize.h" />
     <ClInclude Include="include\Tank.h" />
+    <ClInclude Include="include\Target.h" />
     <ClInclude Include="include\XBox360Controller.h" />
-    <ClInclude Include="Target.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Bullet.cpp" />
@@ -42,8 +42,8 @@
     <ClCompile Include="src\MathUtility.cpp" />
     <ClCompile Include="src\OrientedBoundingBox.cpp" />
     <ClCompile Include="src\Tank.cpp" />
+    <ClCompile Include="src\Target.cpp" />
     <ClCompile Include="src\XBox360Controller.cpp" />
-    <ClCompile Include="Target.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{F10133B9-852C-4A93-A994-DC0D1C009AD5}</ProjectGuid>
