--- a/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj.filters
+++ b/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj.filters
@@ -18,6 +18,9 @@
     <None Include="resources\levels\level1.yaml">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="resources\data\gameData.yaml">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game.h">
@@ -50,6 +53,9 @@
     <ClInclude Include="include\Target.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\RoundStatsSaver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -80,6 +86,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\Target.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\RoundStatsSaver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
