--- a/SFML Projects/SFML_Basic_Concepts/resources/data/gameData.yaml
+++ b/SFML Projects/SFML_Basic_Concepts/resources/data/gameData.yaml
@@ -1,16 +1,16 @@
 stats:
-  - percTargetsHit: 1
-    accuracy: 1
+  - accuracy: 1
     score: 86
-  - percTargetsHit: 777
-    score: 50
+    percTargetsHit: 1
+  - score: 50
+    percTargetsHit: 777
     accuracy: 666
   - score: 45
     accuracy: 2
     percTargetsHit: 2
-  - accuracy: 3
+  - score: 26
+    accuracy: 3
     percTargetsHit: 53
-    score: 26
-  - percTargetsHit: 8
+  - score: 6
+    percTargetsHit: 8
     accuracy: 8
-    score: 6
