--- a/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj.filters
+++ b/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClInclude Include="include\RoundStatsSaver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CircularSectorShape.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -89,6 +92,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\RoundStatsSaver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CircularSectorShape.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
