Round now ends when all targets have been hit

--- a/SFML Projects/SFML_Basic_Concepts/resources/data/gameData.yaml
+++ b/SFML Projects/SFML_Basic_Concepts/resources/data/gameData.yaml
@@ -1,16 +1,16 @@
 stats:
-  - accuracy: 84
-    score: 179
+  - score: 179
     percTargetsHit: 100
-  - accuracy: 73
-    percTargetsHit: 100
+    accuracy: 84
+  - percTargetsHit: 100
     score: 144
-  - score: 142
+    accuracy: 73
+  - percTargetsHit: 100
     accuracy: 68
-    percTargetsHit: 100
+    score: 142
   - score: 140
     percTargetsHit: 100
     accuracy: 78
-  - score: 138
-    percTargetsHit: 100
+  - percTargetsHit: 100
+    score: 138
     accuracy: 61
