--- a/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj
+++ b/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj
@@ -23,12 +23,15 @@
     <None Include="resources\levels\level1.yaml" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CircularSectorShape.h" />
+    <ClInclude Include="GameState.h" />
     <ClInclude Include="include\Bullet.h" />
+    <ClInclude Include="include\CircularSectorShape.h" />
     <ClInclude Include="include\CollisionDetector.h" />
     <ClInclude Include="include\Game.h" />
+    <ClInclude Include="include\GUIButton.h" />
     <ClInclude Include="include\LevelLoader.h" />
     <ClInclude Include="include\MathUtility.h" />
+    <ClInclude Include="include\MenuScreen.h" />
     <ClInclude Include="include\OrientedBoundingBox.h" />
     <ClInclude Include="include\RoundStatsSaver.h" />
     <ClInclude Include="include\ScreenSize.h" />
@@ -37,13 +40,15 @@
     <ClInclude Include="include\XBox360Controller.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CircularSectorShape.cpp" />
     <ClCompile Include="src\Bullet.cpp" />
+    <ClCompile Include="src\CircularSectorShape.cpp" />
     <ClCompile Include="src\CollisionDetector.cpp" />
     <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\GUIButton.cpp" />
     <ClCompile Include="src\LevelLoader.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MathUtility.cpp" />
+    <ClCompile Include="src\MenuScreen.cpp" />
     <ClCompile Include="src\OrientedBoundingBox.cpp" />
     <ClCompile Include="src\RoundStatsSaver.cpp" />
     <ClCompile Include="src\Tank.cpp" />
