Added comments and added more menu buttons

--- a/SFML Projects/SFML_Basic_Concepts/resources/data/gameData.yaml
+++ b/SFML Projects/SFML_Basic_Concepts/resources/data/gameData.yaml
@@ -2,15 +2,15 @@ stats:
   - accuracy: 84
     percTargetsHit: 100
     score: 179
-  - score: 144
-    accuracy: 73
-    percTargetsHit: 100
-  - score: 144
-    accuracy: 78
-    percTargetsHit: 100
-  - score: 142
-    percTargetsHit: 100
-    accuracy: 68
   - accuracy: 73
     percTargetsHit: 100
+    score: 144
+  - score: 144
+    percTargetsHit: 100
+    accuracy: 78
+  - percTargetsHit: 100
+    accuracy: 68
+    score: 142
+  - accuracy: 73
     score: 141
+    percTargetsHit: 100
