--- a/SFML Projects/SFML_Basic_Concepts/resources/levels/level1.yaml
+++ b/SFML Projects/SFML_Basic_Concepts/resources/levels/level1.yaml
@@ -1,5 +1,5 @@
 background:
-   file: ./resources/images/Background.jpg # Sample comment
+   file: ./resources/images/Background.png # Sample comment
 tank:
    position: {x: 800, y: 100}
    max_projectiles: 10
