--- a/SFML Projects/SFML_Basic_Concepts/resources/data/gameData.yaml
+++ b/SFML Projects/SFML_Basic_Concepts/resources/data/gameData.yaml
@@ -1,16 +1,16 @@
 stats:
-  - score: 179
-    percTargetsHit: 100
-    accuracy: 84
   - percTargetsHit: 100
-    score: 144
-    accuracy: 73
+    score: 179
+    accuracy: 84
   - score: 144
     percTargetsHit: 100
+    accuracy: 73
+  - percTargetsHit: 100
     accuracy: 78
+    score: 144
   - score: 143
     percTargetsHit: 100
     accuracy: 68
-  - accuracy: 68
+  - score: 142
     percTargetsHit: 100
-    score: 142
+    accuracy: 68
