--- a/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj.filters
+++ b/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClInclude Include="include\XBox360Controller.h">
       <Filter>Header Files\Abstract</Filter>
     </ClInclude>
+    <ClInclude Include="HelpScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -144,6 +147,9 @@
     </ClCompile>
     <ClCompile Include="src\XBox360Controller.cpp">
       <Filter>Source Files\Abstract</Filter>
+    </ClCompile>
+    <ClCompile Include="HelpScreen.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
