--- a/SFML Projects/SFML_Basic_Concepts/resources/data/gameData.yaml
+++ b/SFML Projects/SFML_Basic_Concepts/resources/data/gameData.yaml
@@ -2,15 +2,15 @@ stats:
   - score: 179
     percTargetsHit: 100
     accuracy: 84
-  - score: 144
+  - accuracy: 73
     percTargetsHit: 100
-    accuracy: 73
+    score: 144
   - score: 144
     percTargetsHit: 100
     accuracy: 78
-  - accuracy: 68
+  - percTargetsHit: 100
     score: 143
-    percTargetsHit: 100
+    accuracy: 68
   - percTargetsHit: 100
     score: 143
     accuracy: 84
