--- a/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj.filters
+++ b/SFML Projects/SFML_Basic_Concepts/SFML_Playground.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClInclude Include="include\ProjectilePool.h">
       <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
+    <ClInclude Include="include\TankAI.h">
+      <Filter>Header Files\GameObjects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -164,6 +167,9 @@
       <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
     <ClCompile Include="src\ProjectilePool.cpp">
+      <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TankAI.cpp">
       <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
   </ItemGroup>
